--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.9.0",
+    "js-datepicker": "^5.18.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
